button overlap fix

--- a/src/style.css
+++ b/src/style.css
@@ -31,12 +31,9 @@ body {
   padding-bottom: 0;
 }
 
-@media (min-height: 720px) {
-  .footer-fixed {
-    position: fixed;
-    bottom: 130px;
-  }
-}
+
+
+
 
 button.close-btn {
   background-color: transparent;
@@ -64,8 +61,7 @@ button.close-btn {
 
 h1.totaldisp {
   text-align: center;
-  font-size: 400px;
-  font-size: 75vmin;
+  font-size: 60vh;
   margin-bottom: 0;
   padding-bottom: 0;
 }
@@ -89,8 +85,5 @@ h1.totaldisp {
 }
 
 .action-buttons {
-  position: fixed;
-  bottom: 100px;
-  left: 0;
-  right: 0;
 }
+
